--- a/envs/read_quality.yaml
+++ b/envs/read_quality.yaml
@@ -1,84 +1,7 @@
 name: read_quality
 channels:
-  - default
-  - bioconda
   - conda-forge
-  - defaults
+  - bioconda
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - biopython=1.74=py37h7b6447c_0
-  - blas=1.0=mkl
-  - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2019.11.27=0
-  - certifi=2019.11.28=py37_0
-  - curl=7.67.0=hbc83047_0
-  - cycler=0.10.0=py37_0
-  - dbus=1.13.12=h746ee38_0
-  - expat=2.2.6=he6710b0_0
-  - fastqc=0.11.8=2
-  - font-ttf-dejavu-sans-mono=2.37=h6964260_0
-  - fontconfig=2.13.0=h9420a91_0
-  - freetype=2.9.1=h8a8886c_1
-  - glib=2.63.1=h5a9c865_0
-  - gst-plugins-base=1.14.0=hbbd80ab_1
-  - gstreamer=1.14.0=hb453b48_1
-  - icu=58.2=h9c2bf20_1
-  - intel-openmp=2019.4=243
-  - jpeg=9b=h024ee3a_2
-  - kiwisolver=1.1.0=py37he6710b0_0
-  - krb5=1.16.4=h173b8e3_0
-  - libcurl=7.67.0=h20c2e04_0
-  - libdeflate=1.0=h14c3975_1
-  - libedit=3.1.20181209=hc058e9b_0
-  - libffi=3.2.1=hd88cf55_4
-  - libgcc-ng=9.1.0=hdf63c60_0
-  - libgfortran-ng=7.3.0=hdf63c60_0
-  - libpng=1.6.37=hbc83047_0
-  - libssh2=1.8.2=h1ba5d50_0
-  - libstdcxx-ng=9.1.0=hdf63c60_0
-  - libuuid=1.0.3=h1bed415_2
-  - libxcb=1.13=h1bed415_1
-  - libxml2=2.9.9=hea5a465_1
-  - matplotlib=3.1.1=py37h5429711_0
-  - mkl=2019.4=243
-  - mkl-service=2.3.0=py37he904b0f_0
-  - mkl_fft=1.0.15=py37ha843d7b_0
-  - mkl_random=1.1.0=py37hd6b4f25_0
-  - nanoget=1.12.0=py_0
-  - nanomath=0.23.1=py_1
-  - nanoplot=1.28.2=py_0
-  - ncurses=6.1=he6710b0_1
-  - numpy=1.17.4=py37hc1035e2_0
-  - numpy-base=1.17.4=py37hde5b4d6_0
-  - openjdk=8.0.152=h46b5887_1
-  - openssl=1.1.1d=h7b6447c_3
-  - pandas=0.25.3=py37he6710b0_0
-  - patsy=0.5.1=py37_0
-  - pauvre=0.1.86=py_1
-  - pcre=8.43=he6710b0_0
-  - perl=5.26.2=h14c3975_0
-  - pip=19.3.1=py37_0
-  - plotly=4.4.1=py_0
-  - pyparsing=2.4.5=py_0
-  - pyqt=5.9.2=py37h05f1152_2
-  - pysam=0.15.3=py37hda2845c_1
-  - python=3.7.5=h0371630_0
-  - python-dateutil=2.8.1=py_0
-  - pytz=2019.3=py_0
-  - qt=5.9.7=h5867ecd_1
-  - readline=7.0=h7b6447c_5
-  - retrying=1.3.3=py37_2
-  - scipy=1.3.2=py37h7c811a0_0
-  - seaborn=0.9.0=pyh91ea838_1
-  - setuptools=44.0.0=py37_0
-  - sip=4.19.8=py37hf484d3e_0
-  - six=1.13.0=py37_0
-  - sqlite=3.30.1=h7b6447c_0
-  - statsmodels=0.10.1=py37hdd07704_0
-  - tk=8.6.8=hbc83047_0
-  - tornado=6.0.3=py37h7b6447c_0
-  - wheel=0.33.6=py37_0
-  - xz=5.2.4=h14c3975_4
-  - zlib=1.2.11=h7b6447c_3
-prefix: /home/nu76fet/miniconda3/envs/read_quality
-
+  - fastqc>=0.11.8
+  - nanoplot>=1.28.2
