--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,10 @@
 # pipeline type: long or hybrid
-pipeline: [long]
+pipeline: [hybrid]
 # # insert path to the input folder - raw reads
-input_shortreads: [/path/to/short/reads/]
-input_longreads: [/path/to/long/reads/]
+input_shortreads: [/path/to/short/reads]
+input_longreads: [/path/to/long/reads]
 # insert path to the output folder
-output: [/path/to/output/folder/]
+output: [/path/to/output/folder]
 # insert the name of the strains
 # e.g.  strains: [15DD0163, 11DD0261, ... ]
 strains: [strain01, strain02, strain03, ...]
-# 11DD0261 , 13DD0918, 14DD0148, 14DD0156, 14DD0457, 15DD0123, 15DD0140, 15DD0141, 15DD0160, 15DD0161]
