--- a/envs/preprocessing.yaml
+++ b/envs/preprocessing.yaml
@@ -3,6 +3,6 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - fastp>=0.20.0
-  - trimmomatic>=0.39
-  - filtlong>=0.2.0
+  - fastp=0.20.0
+  - trimmomatic=0.39
+  - filtlong=0.2.0
