--- a/envs/read_quality.yaml
+++ b/envs/read_quality.yaml
@@ -3,5 +3,6 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - fastqc>=0.11.8
-  - nanoplot>=1.28.2
+  - fastqc=0.11.8
+  - nanoplot=1.41.0
+  - pysam=0.20.0
